# Mercurial

./: .gitignore  CLAUDE.md  CMakeLists.txt
specs/: grammar.md  roadmap.md  types.md
src/: main.cpp
src/core/: contract.hpp  types.hpp
src/frontend/ast/: ast.hpp  binding.hpp  decl.hpp  expr.hpp  node.hpp  pattern.hpp  stmt.hpp  type.hpp
src/frontend/lexer/: cursor.hpp  keywords.hpp  lexer.hpp  lexical_error.hpp  predicates.hpp
src/frontend/parser/: parse_decl.cpp  parse_expr.cpp  parse_pattern.cpp  parse_stmt.cpp  parse_type.cpp  parser.hpp  syntax_error.hpp  token_stream.hpp
src/frontend/source/: manager.hpp  source.hpp  span.hpp
src/frontend/token/: token.hpp  token_kind.hpp
